<resources>
    <string name="app_name">HireASkill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="login">LOGIN</string>
    <string name="email">Enter Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="jobs">JOBS</string>
    <string name="add">ADD</string>
    <string name="user_skill">USER SKILL</string>
    <string name="Email">Email</string>
    <string name="user_profile">User Profile</string>
    <string name="jobs_mentioned">JOBS MENTIONED</string>
    <string name="profile">PROFILE</string>
    <string name="save">SAVE</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_pro">Email</string>
    <string name="username">Username</string>
    <string name="hire">HIRE</string>
    <string name="job_title">Job title</string>
    <string name="location">Location</string>
    <string name="requirements">Requirements</string>
    <string name="salary">Salary(INR)</string>
    <string name="chat">CHAT</string>
    <string name="hireaskill123">HIREASKILL</string>
    <string name="mobile_contact"><a href="7276818115">7276818115</a></string>
    <string name="app_link"><a href="https://instagram.com/mrunmayiii__?igshid=YmMyMTA2M2Y">Instagram</a></string>
    <string name="email_link"><a href="impratikspatil@gmail.com">Email</a></string>


</resources>