<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Material3.Dark"
    android:layout_width="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#363636"
    tools:context=".Home.add_job_fragment">



        <androidx.cardview.widget.CardView
            android:id="@+id/addjobs_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/login_activity_color"
            android:elevation="30dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hire"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/user_icon_white"

                        >

                    </ImageView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text"
                        android:hint="@string/username"
                        style="@style/LoginTextInputLayoutStyle"
                        android:textColorHint="@color/grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="true"
                            android:textCursorDrawable="@drawable/cursor"
                            android:backgroundTint="@color/login_activity_color"
                            android:inputType="textPersonName"
                            android:textColor="#ffffff"

                            />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_baseline_title_24"
                        app:tint="@color/white"/>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/job_title"
                        style="@style/LoginTextInputLayoutStyle"
                        app:endIconMode="clear_text"
                        android:textColorHint="@color/grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textCursorDrawable="@drawable/cursor"
                            android:backgroundTint="@color/login_activity_color"
                            android:inputType="textShortMessage"
                            android:textColor="#ffffff" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_baseline_location_on_24"
                        app:tint="@color/white">

                    </ImageView>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        style="@style/LoginTextInputLayoutStyle"
                        app:endIconMode="clear_text"
                        android:textColorHint="@color/grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textCursorDrawable="@drawable/cursor"
                            android:backgroundTint="@color/login_activity_color"
                            android:inputType="textShortMessage"
                            android:textColor="#ffffff"

                            />


                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_baseline_currency_rupee_24"
                        app:tint="@color/white">

                    </ImageView>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/salary"
                        app:endIconMode="clear_text"
                        style="@style/LoginTextInputLayoutStyle"
                        android:textColorHint="@color/grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/salary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textCursorDrawable="@drawable/cursor"
                            android:backgroundTint="@color/login_activity_color"
                            android:inputType="number"
                            android:textColor="#ffffff"

                            />


                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_baseline_edit_note_24"
                        app:tint="@color/white">

                    </ImageView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/LoginTextInputLayoutStyle"
                        android:hint="@string/requirements"
                        app:endIconMode="clear_text"
                        android:textColorHint="@color/grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPassConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:textCursorDrawable="@drawable/cursor"
                            android:backgroundTint="@color/login_activity_color"
                            android:inputType="textLongMessage"
                            android:textColor="#ffffff" />


                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:backgroundTint="#FF0000"
            android:text="@string/add"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addjobs_cardview" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>